<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="about_me">О себе</string>
  <string name="about_subscription">О подписке</string>
  <string name="action_settings">Settings</string>
  <string name="activity_audio_archive">Слушать архив</string>
  <string name="activity_audio_live">Слушать эфир</string>
  <string name="add_comment">Добавить комментарий</string>
  <string name="add_to_fav">Добавить в "Смотреть позже"</string>
  <string name="add_to_fav_auth_first_dialog">Для добавления материала в "Смотреть позже" вам необходимо авторизоваться! Сделать это сейчас?</string>
  <string name="added_to_favs">Сохранено в "Смотреть позже". Найти этот раздел можно в боковом меню.</string>
  <string name="adv">Реклама</string>
  <string name="agreement_accept">Согласиться</string>
  <string name="agreement_label">Соглашение</string>
  <string name="all_comments">Все комментарии</string>
  <string name="all_news_info_label">Все новости</string>
  <string name="all_videos_with_theme">Все видео по теме</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="app_name">TV Rain</string>
  <string name="app_name_main">TV Rain</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="auth_first">Сначала необходимо авторизоваться</string>
  <string name="auth_link_dialog_content">Если у вас уже есть подписка на Дождь, привязанная на нашем сайте к e–mail, вы можете связать аккаунты в личном кабинете на <a href="https://tvrain.tv/">tvrain.tv</a>. Затем надо будет вернуться в приложение и заново войти в аккаунт. Как связать аккануты можно посмотреть <a href="https://tvrain.tv/helpcenter/questions/88-4/">по ссылке</a></string>
  <string name="authorization">Авторизация</string>
  <string name="available_for_subscribers">Доступно только подписчикам</string>
  <string name="back_to_video">Вернуться к видео</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="button_record_video">Записать видео</string>
  <string name="button_select_video">Выбрать из галереи</string>
  <string name="button_start_recording">Начать запись</string>
  <string name="button_stop_recording">Остановить запись</string>
  <string name="button_text_apply_offer">Принять</string>
  <string name="button_text_cancel_rate">Нет, спасибо</string>
  <string name="button_text_exit">Выйти</string>
  <string name="button_text_invite_friends">Пригласить друзей</string>
  <string name="button_text_no">Нет</string>
  <string name="button_text_ok">Ок</string>
  <string name="button_text_rate">Оценить сейчас</string>
  <string name="button_text_rate_later">Напомнить позже</string>
  <string name="button_text_remove">Удалить</string>
  <string name="button_text_retry">Повторить</string>
  <string name="button_text_save_video">Оставить</string>
  <string name="button_text_try_again">Попробовать ещё раз</string>
  <string name="button_text_yes">Да</string>
  <string name="buy">Купить</string>
  <string name="buy_subscription">Купить подписку</string>
  <string name="buy_subscription_clicked">Buy subscription click</string>
  <string name="cancel">Отмена</string>
  <string name="cast_ad_label">Ad</string>
  <string name="cast_app_id">EDE043E9</string>
  <string name="cast_casting_to_device">Casting to %1$s</string>
  <string name="cast_closed_captions">Closed captions</string>
  <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
  <string name="cast_connecting_to_device">Connecting to %1$s</string>
  <string name="cast_device_chooser_searching_for_devices">Finding devices</string>
  <string name="cast_device_chooser_title">Cast to</string>
  <string name="cast_disconnect">Disconnect</string>
  <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
  <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
  <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
  <string name="cast_expanded_controller_background_image">Album art</string>
  <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
  <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
  <string name="cast_expanded_controller_loading">Loading…</string>
  <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
  <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
  <string name="cast_forward">Forward</string>
  <string name="cast_forward_10">Forward ten seconds</string>
  <string name="cast_forward_30">Forward thirty seconds</string>
  <string name="cast_intro_overlay_button_text">@android:string/ok</string>
  <string name="cast_invalid_stream_duration_text">--:--</string>
  <string name="cast_invalid_stream_position_text">--:--</string>
  <string name="cast_live_label">LIVE</string>
  <string name="cast_mute">Mute</string>
  <string name="cast_notification_connected_message">Connected to %1$s</string>
  <string name="cast_notification_connecting_message">Connecting to %1$s</string>
  <string name="cast_notification_default_channel_name">Cast</string>
  <string name="cast_notification_disconnect">Disconnect</string>
  <string name="cast_pause">Pause</string>
  <string name="cast_play">Play</string>
  <string name="cast_rewind">Rewind</string>
  <string name="cast_rewind_10">Rewind ten seconds</string>
  <string name="cast_rewind_30">Rewind thirty seconds</string>
  <string name="cast_seek_bar">Playback seek control</string>
  <string name="cast_skip_next">Skip to next item</string>
  <string name="cast_skip_prev">Skip to previous item</string>
  <string name="cast_stop">Stop</string>
  <string name="cast_stop_live_stream">Stop live stream</string>
  <string name="cast_tracks_chooser_dialog_audio">Audio</string>
  <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
  <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
  <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
  <string name="cast_tracks_chooser_dialog_none">None</string>
  <string name="cast_tracks_chooser_dialog_ok">OK</string>
  <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
  <string name="cast_unmute">Unmute</string>
  <string name="cast_zero_devices_found">No devices found.
</string>
  <string name="cast_zero_devices_learn_more_description"><a href="https://support.google.com/chromecastbuiltin/answer/3006709">Learn more</a> about how you can cast your content to other devices.</string>
  <string name="casting_to_device">Воспроизводится на %1$s</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="check_google_play_services">Для работы приложения необходима актуальная версия Google Play Services</string>
  <string name="chip_text">Chip text</string>
  <string name="choose">Загрузить</string>
  <string name="choose_item">Выберите</string>
  <string name="choose_quality">Выберите качество</string>
  <string name="choose_question">Выберите вопрос:</string>
  <string name="dialog_content_rate">Если вам нравится TV Rain, пожалуйста, поставьте свою оценку. Это займет у вас не больше одной минуты.
Спасибо за поддержку!</string>
  <string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
  <string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
  <string name="gift_description">Теперь вы можете дарить своим друзьям месяц бесплатной подписки! А если в итоге им понравится и они сами купят подписку на Дождь, то вы тоже получите подарок — месяц за каждое успешное подключение друга. Смотрите оба! 

Условия:

1. Отправьте ссылку другу, который еще не был подписчиком Дождя (внутри ссылки уникальный код, по которому мы сможем распознать приведенных вами друзей) 

2. Другу нужно пройти по ссылке и зарегистрироваться. После этого подарочная подписка на 30 дней активируется 

3. Если вашему другу понравится Дождь и он оплатит доступ к нашему контенту, то и вы получите бонус — дополнительные 30 дней к вашей подписке. И так будет с каждым новым приведенным вами другом.</string>
  <string name="gift_friends_bought">Друзья, которые купили подписку:</string>
  <string name="gift_friends_registered">Друзья, которые воспользовались вашим кодом:</string>
  <string name="gift_share">Кликните по ссылке, чтобы скопировать ее в буфер обмена, и отправьте другу в мессенджер или поделитесь ей в социальных сетях сразу со всеми:</string>
  <string name="gift_your_link">Ваша персональная ссылка на приглашение:</string>
  <string name="hint_email">Электронная почта</string>
  <string name="hint_name">Имя</string>
  <string name="hint_password">Пароль</string>
  <string name="hint_password_repeat">Повторите пароль</string>
  <string name="news_all_news">Все новости</string>
  <string name="ph_date">12.12.2018</string>
  <string name="ph_news_name">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
  <string name="ph_program_name">И так далее с Михаилом Фишманом</string>
  <string name="purchase_info_description">Мы отправим на него письмо с чеком об оплате</string>
  <string name="purchase_info_field_hint">Телефон или e-mail</string>
  <string name="purchase_info_heading">Введите ваш телефон или e-mail</string>
  <string name="purchase_info_send">Отправить</string>
  <string name="quality_auto">Авто</string>
  <string name="quality_high">Высокое качество</string>
  <string name="quality_low">Низкое качество</string>
  <string name="quality_medium">Среднее качество</string>
  <string name="share">Поделиться</string>
  <string name="teleshow_all">Свежее</string>
  <string name="teleshow_full">Полные версии</string>
  <string name="teleshow_schedule">Следующий выпуск %s</string>
</resources>