<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <include android:id="@id/toolbar"
           layout="@layout/toolbar" />
  <ScrollView android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout android:layout_gravity="center_vertical"
                  android:orientation="vertical"
                  android:padding="@dimen/padding"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
      <TextView android:textSize="18.0sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase_info_heading" />
      <TextView android:textSize="15.0sp"
                android:textColor="@color/color_rain_text_gray"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="210.0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dp"
                android:text="@string/purchase_info_description" />
      <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_spacing"
                    android:layout_marginBottom="@dimen/vertical_spacing3">
        <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/info"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="24.0dp"
                              android:hint="@string/purchase_info_field_hint"
                              android:singleLine="true"
                              android:inputType="textEmailAddress"
                              style="@style/MaterialEditText.Accent" />
      </LinearLayout>
      <Button android:id="@id/send"
              android:text="@string/purchase_info_send"
              style="@style/Button.Pink" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>