<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <include android:id="@id/toolbar"
           layout="@layout/toolbar" />
  <LinearLayout android:orientation="vertical"
                android:padding="@dimen/vertical_spacing"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/firstname"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/hint_name"
                          android:singleLine="true"
                          android:inputType="textCapWords|textPersonName"
                          style="@style/MaterialEditText.Accent" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/email"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/hint_email"
                          android:singleLine="true"
                          android:inputType="textEmailAddress"
                          style="@style/MaterialEditText.Accent" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/password1"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/hint_password"
                          android:singleLine="true"
                          android:inputType="textPassword"
                          style="@style/MaterialEditText.Accent" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/password2"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/vertical_spacing"
                          android:hint="@string/hint_password_repeat"
                          android:singleLine="true"
                          android:inputType="textPassword"
                          style="@style/MaterialEditText.Accent" />
    <Button android:id="@id/registration"
            android:text="Зарегистрироваться"
            style="@style/Button.Pink" />
  </LinearLayout>
</LinearLayout>