<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:background="@color/dialog_background"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <ImageView android:id="@id/closeButton"
             android:padding="@dimen/default_padding"
             android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8.0dp"
             android:src="@0x7f0800af"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             style="@style/SelectableFull" />
  <LinearLayout android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1.0" />
    <TextView android:textSize="16.0sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:id="@id/textView"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/default_padding"
              android:text="@string/dialog_content_rate" />
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1.0" />
    <Button android:id="@id/rateButton"
            android:background="@drawable/button_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_rate" />
    <Button android:id="@id/rateLaterButton"
            android:background="@drawable/button_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/button_text_rate_later" />
    <Button android:id="@id/cancelButton"
            android:background="@drawable/button_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/button_text_cancel_rate" />
  </LinearLayout>
</RelativeLayout>