<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:paddingLeft="@dimen/content_padding"
              android:paddingRight="@dimen/content_padding"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              style="@style/Selectable" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:raintv="http://schemas.android.com/apk/res-auto">
  <LinearLayout android:orientation="vertical"
                android:paddingTop="@dimen/list_element_vertical_padding"
                android:paddingBottom="@dimen/list_element_vertical_padding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <com.hintsolutions.raintv.views.CustomFontTextView android:textSize="16.0sp"
                          android:textColor="@color/color_new_text_black"
                          android:id="@id/name"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/ph_news_name"
                          android:lineSpacingExtra="8.0sp"
                          raintv:font_face="@string/font_roboto_regular" />
    <com.hintsolutions.raintv.views.CustomFontTextView android:textSize="14.0sp"
                          android:textColor="@color/color_new_text_gray"
                          android:id="@id/date"
                          android:paddingTop="8.0dp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/ph_date"
                          android:lineSpacingExtra="6.0sp"
                          raintv:font_face="@string/font_roboto_regular" />
  </LinearLayout>
  <LinearLayout android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@id/all_news_link"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:paddingBottom="16.0dp"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
    <com.hintsolutions.raintv.views.CustomFontTextView android:textSize="16.0sp"
                          android:textColor="@color/color_new_pink"
                          android:id="@id/section_header"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/news_all_news"
                          android:lineSpacingExtra="4.0sp"
                          raintv:font_face="@string/font_roboto_medium" />
    <ImageView android:id="@id/imageView11"
               android:paddingLeft="2.0dp"
               android:paddingTop="4.0dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.0"
               raintv:srcCompat="@0x7f08005a" />
  </LinearLayout>
  <LinearLayout android:orientation="vertical"
                android:id="@id/adLayout"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_element_vertical_padding"
                android:minHeight="50.0dp" />
  <View android:id="@id/elementDivider"
        android:background="@drawable/news_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>